--- a/0 主页.md
+++ b/0 主页.md
@@ -54,7 +54,7 @@
 > 于 二〇二四 年 八 月 三十 日 彻底关闭
 
 > 本站运维经验来自于 <a href="https://publish.obsidian.md/econsun/Welcome+to+My+Webpage">Stu. Paul Sun</a> 网站 与 <a href="https://mp.weixin.qq.com/mp/profile_ext?action=home&__biz=MzkxOTY0MzM2MA==#wechat_redirect">Econ Sun</a> 公众号 的建设
-> 本站物料已经开源在 [GitHub 仓库](https://github.com/econsun/econfaq)，著作与解释权归 极光经济学考研 所有
+> 本站物料已经开源在 [GitHub 仓库](https://github.com/econsun/FAQ_ECON)，著作与解释权归 极光经济学考研 所有
 
 > 2024-07-27：<font color = #E9573F>删除</font> - 汇总问答 中知识分类的链接
 > 2024-07-27：<font color = #E9573F>删除</font> - 主页 > 说明 中部分内容
