--- a/1 汇总问题（伸长版）.md
+++ b/1 汇总问题（伸长版）.md
@@ -1,10 +1,114 @@
-> [[0 主页|回到主页]]
 > 联系方式：<a href="https://qm.qq.com/q/iA1sKuakak">2629223739 (QQ)</a> <a href="mailto:econsunrq@outlook.com">econsunrq@outlook.com (邮箱)</a>
-> 问题流水按「更新日期降序」，大体与「提问日期降序」一致
 
- [[240729_88_汇总问答.pdf|点此查看下载前 88 题 PDF (7.61MB)]]
+### Problem 91 - 100
+
+> [!question] 0095 | 宏观经济学中字母 $M$ 是代表什么变量？$\color{#EC7500}\bigstar\bigstar$
+> 
+> 曼昆 第十版 第 82 页讲到了数量方程，只说 $M$ 是货币量，此外既没说是需求也没说是供给。在货币的符号方面，一般没有上角标的 $M$ 是货币供给，有上角标的 $M^d$ 是货币需求。当我们把二者混为一谈的时候，隐晦地使用了 $M=M^d$ 这一均衡条件。
+> 
+> 紧接着 <font color = #D7422A>83 页就讲到了货币需求函数，这是本书中第一次出现货币需求函数。</font>这个货币需求函数可以认为是长期中的，我这么判断是因为我们还没进入短期理论。书中第二次谈到货币需求函数就要到流动性偏好理论了，那是短期的货币需求函数。所以在书中，我们学习了两个货币需求的理论，一个是新古典的，一个是凯恩斯的，这些等价名称都要记住，避免看到了辨认不出。
+> 
+> **知识分类**：宏观 - 长期经济
+> **提问日期**：2024 - 08 - 19
+> **首次编辑**：2024 - 08 - 28
+^0095
+
+> [!question] 0094 | 为什么停止营业点的产量小于收支相抵点的。$\color{#EC7500}\bigstar$
+> 
+> <font color = #003C88>停止营业点和收支相抵点都是商品价格与厂商成本曲线作比较，与产量无关。</font>这两个点都是厂商利润最大化的选择，只要不追求利润最大化，厂商就可以选择其它的产量水平。
+> 
+> 停止营业点是 P 与 AVC 确定的；收支相抵点是 P 与 AC 确定的。总成本不小于 可变成本，所以总成本需要更多的产量来平摊，以至于 AC 的最低点出现在比 AVC 最低点更大的产量水平。
+> 
+> 在图像上，AC 和 AVC 都相交于 MC 的递增阶段，必然有先后顺序，后者交于更大的产量水平。
+> 
+> **知识分类**：微观 - 市场理论
+> **提问日期**：2024 - 08 - 17
+> **首次编辑**：2024 - 08 - 28
+^0094
+
+> [!question] 0093 | 当限制厂商自由进出后，商品价格是如何确定的？$\color{#EC7500}\bigstar\bigstar$
+> 
+> 先说结论：<font color = #003C88>由市场供需决定。</font>说直白点，既然厂商都不能定价了，那除了行业还能是谁来定价呢？
+> 
+> 在完全竞争市场中，我们推导行业供给曲线，就是为了与行业需求曲线相交确定商品价格。<font color = #003C88>当厂商不能自由进出后，该市场在长期中不能满足完全竞争均衡，但不影响厂商们仍是价格接受者。</font>此时厂商会根据自己的边际成本曲线和商品价格确定产量，而这个商品价格也是由行业内厂商的边际成本加总得到的行业供给曲线和行业需求曲线相交得来的。
+> 
+> <font color = #003C88>在完全垄断市场中，厂商自己的的供给曲线就是行业供给曲线，</font>我们既可以说商品价格是该垄断厂商定的，也可以说是行业定的。
+> 
+> 在领导厂商模型中，不是所有厂商都和完全竞争市场一样是价格接受者，大多数厂商是价格接受者，少部分厂商是价格制定者。垄断竞争市场中的商品价格也不是行业供需决定的，更多决定权在领导厂商手上，行业需求只是影响因素之一。
+> 
+> **知识分类**：微观 - 市场理论
+> **提问日期**：2024 - 08 - 14
+> **首次编辑**：2024 - 08 - 28
+^0093
+
+> [!question] 0092 | 为什么有的最优化问题的约束条件出现不等于号？$\color{#EC7500}\bigstar$
+> 
+> 我们知道，在消费者选择中，预算约束是这样的
+> $$p_1\,x_1+p_2\,x_2\le m$$
+> 我们不会在这件事上写等于号，但是在效用最大化问题中，一般会把约束条件写成等号，难道这里面有矛盾？到底是下面中哪一种？
+> $$\begin{aligned}\mathrm{s.t.} \ \ & p_1\,x_1+p_2\,x_2\le m\\\\\mathrm{s.t.} \ \ & p_1\,x_1+p_2\,x_2=m\end{aligned}$$
+> 
+> 毫无疑问，<font color = #D7422A>不等式约束包含了等式约束，</font>所以不等式约束的最优化问题有更广的使用空间，这么做肯定没错。之所以写成等号，因为<font color = #003C88>许多问题里默认了偏好 “有越多越好” 的性质，</font>基于这点，消费者会花光收入，必然支出等于收入，不等式约束进一步修改为等式约束。
+> 
+> 还有很多最优化问题也有类似的原因，约束条件中只有等式约束。<font color = #D7422A>写不等式绝对不是不严谨，反而是更严谨。</font>等遇到非良性偏好时，再写 $p_1\,x_1+p_2\,x_2=m$ 就很可能解不出来最优选择了。
+> 
+> 但也要注意，不等式约束的最优化问题解起来比等式约束的麻烦，所以在确保可行时，尽量写等式约束的最优化问题。
+> 
+> **知识分类**：微观 - 消费理论
+> **提问日期**：2024 - 08 - 14
+> **首次编辑**：2024 - 08 - 28
+^0092
+
+> [!question] 0091 | 超长期经济中增长率的性质。$\color{#EC7500}\bigstar\bigstar\bigstar$
+> 
+> 假设变量 $C$ 由一个常数和一个变量相乘而得，$C=t\,A$，那么
+> $$g_C=t\cdot g_A$$
+> 假设变量 $D$ 由另外两个变量相乘而得，$D=AB$，那么
+> $$g_D=g_A+g_B$$
+> 假设变量 $E$ 由另外两个不同变量相加而得，$E=A+B$，那么
+> $$g_E\ne g_A+g_B$$
+> <font color = #D7422A>上式有可能碰巧成立，但不是一般性质。</font>第二个式子的成立原因涉及指对数的性质，在此略过。这里我们看看第三个式子为什么不成立，来窥探为什么第一个式子可以成立。
+> $$\dfrac{\Delta E}{E}=\dfrac{\Delta\left(A+B\right)}{A+B}=\dfrac{\Delta A}{A+B}+\dfrac{\Delta B}{A+B}$$
+> 分子拆成了两个变量，但是分母没有，无法代入 $g_A$ 和 $g_B$，可见分子的拆分是白折腾。$C=t\,A$ 可以视为 $t$ 个 $A$ 相加，使用上式的方法不难证明成立。最后补一个细节
+> $$\begin{aligned}\Delta\left(A+B\right)&= \left(A+B\right)_t-\left(A+B\right)_{t-1}\\\\&= A_t+B_t-A_{t-1}-B_{t-1}\\\\&= \Delta A-\Delta B\end{aligned}$$
+> 
+> <font color = #D7422A>这提醒我们，在使用增长率性质的时候，一定要关注式子里有没有加减号，如果有就几乎不能用了，等换个方法。</font>
+> 
+> **知识分类**：宏观 - 超长期经济
+> **提问日期**：2024 - 08 - 08
+> **首次编辑**：2024 - 08 - 28
+^0091
 
 ### Problem 81 - 90
+
+> [!question] 0090 | 不同等级飞机票是哪一种价格歧视？$\color{#EC7500}\bigstar\bigstar$
+> 
+> 首先不必担心看到问题后判断不出价格歧视类型，这种东西很好记，见多了就不会判断不出了。
+> 
+> 三级价格歧视有两个主要条件：1. 消费者可以被分为多个群体，并且商品不能在不同群体间转售；2. 不同群体有不同的需求价格弹性，以便实施不同的价格策略。<font color = #003C88>多数情况中，飞机头等舱和经济舱的价格策略是三级价格歧视，</font>但也有观点认为是二级价格歧视，他们认为消费者购买的是服务，头等舱提供更优质的服务代表消费了更多的服务。
+> 
+> 个人认为第二种观点是有道理的，因为<font color = #003C88>价格歧视指的是在销售同一商品时采取多种价格策略，</font>关键词是 “同一商品”。我们完全可以把头等舱和经济舱看作不同商品，所以情况是两类消费者分别消费了两种商品。而在二级价格歧视中，我们可以当作两类消费者都消费了同种商品 — 服务，只是有消费量的区别。
+> 
+> 之所以这个案例会有争议，还是在于难以接受头等舱和经济舱是同种商品。如果问题换成适龄儿童购买经济舱可享受半价优惠，那毫无疑问是三级价格歧视。注意，<font color = #D7422A>这样的三级价格歧视策略未必能实现利润最大化，</font>可见我们不应该关心价格歧视有没有让厂商赚到更多利润，而是回归价格歧视的定义，看看有没有不同的价格策略。
+> 
+> **知识分类**：微观 - 市场理论
+> **提问日期**：2024 - 08 - 07
+> **首次编辑**：2024 - 08 - 27
+^0090
+
+
+> [!question] 0089 | 储蓄率改变之后的消费、投资、收入的动态分析。$\color{#EC7500}\bigstar\bigstar\bigstar$
+> 
+> 曼昆 第十版 第 173 页讲了该知识点。
+> 
+> 在索洛模型中，投资和储蓄是等值变量，在储蓄率变化时，人均投资也会马上变化。此时<font color = #D7422A>即使人均收入不变，</font>人均消费 $c=\left(1-s\right)\,y$ 也会马上变化。
+> 
+> 现在才考虑人均收入的变化。因为投资带来的收入增加需要时间，所以在<font color = #003C88>投资增加的瞬间不会有收入增加。</font>储蓄率变化带来的收入增加是渐进的。
+> 
+> **知识分类**：宏观 - 超长期经济
+> **提问日期**：2024 - 07 - 29
+> **首次编辑**：2024 - 08 - 27
+^0089
 
 > [!question] 0088 | 为什么不能对 $U\left(E\right)=p\,E^2$ 求导？$\color{#EC7500}\bigstar\bigstar$
 > 
@@ -715,12 +819,13 @@
 > **来源**：曼昆 第十版 第 201 页 第九章 快速测验 第 3 题
 > 
 > 由题意得
-> $$\begin{aligned}\mathrm{GDP}&= 0.5\,K\\\\MPK&=20\%\,\mathrm{GDP}= 10\%\,K\\\\\delta&= 8\%\,\mathrm{GDP}=5\%\,K\end{aligned}$$
+> $$\begin{aligned}\mathrm{GDP}&= 0.5\,K\\\\MPK&=20\%\,\mathrm{GDP}= 10\%\,K\\\\\delta&= 8\%\,\mathrm{GDP}=4\%\,K\end{aligned}$$
 > 所以净资本边际产量为 $10\%\,K-4\%\,K=6\%\,K$ 
 > 
 > **知识分类**：宏观 - 超长期经济
 > **提问日期**：2024 - 04 - 30
 > **首次编辑**：2024 - 05 - 10
+> **二次编辑**：2024 - 07 - 30，<font color = #4A89DC>修改</font>，改正错误数字
 ^0041
 
 ### Problem 31 - 40
@@ -1220,12 +1325,13 @@
 
 > [!question] 0003 | 如何理解：“国外扩张性财政政策减少了世界储蓄，并使世界利率从 $r^*_1$ 上升到 $r^*_2\,$” ？$\color{#EC7500}\bigstar\bigstar$
 > 
-> “开放” 与 “封闭” 是指经济体间是否有贸易往来，因为星球与星球之间没有贸易往来，显然整个世界是封闭的。国外的经济体采取扩张性货币政策，必然会使世界储蓄下降，使用简单的可贷资金模型，即可分析出世界利率下降。小型经济体采用扩张性货币政策，也会使世界储蓄下降，但其效果微乎其微，索性认为对世界储蓄不会有影响，自然不会影响到世界利率。
+> “开放” 与 “封闭” 是指经济体间是否有贸易往来，因为星球与星球之间没有贸易往来，显然整个世界是封闭的。国外的经济体采取扩张性财政政策，必然会使世界储蓄下降，使用简单的可贷资金模型，即可分析出世界利率下降。小型经济体采用扩张性财政政策，也会使世界储蓄下降，但其效果微乎其微，索性认为对世界储蓄不会有影响，自然不会影响到世界利率。
 > 
 > <font color = #D7422A>当提到某个经济体做了什么，导致世界利率变动的时候，没有指明是大型还是小型开放经济，就默认为大型开放经济，因为小型开放经济对世界经济变量的影响没有这么巨大。</font>大型开放经济并非特指中美这类大国，也可以是欧盟这类经济联合体，甚至全球范围普遍的经济问题，大国小国都在用扩张性财政政策应对。所以大型开放经济体是哪个国家不重要，只需要关心它的宏观政策操作结果是什么。
 > 
 > **知识分类**：宏观 - 开放经济
 > **提问日期**：2024 - 03 - 06
+> **二次编辑**：2024 - 08 - 19，<font color = #4A89DC>修改</font>，解答中 “货币政策” 更正为 “财政政策”（感谢同学提醒）
 ^0003
 
 > [!question] 0002 | 完全竞争市场中成本递增行业的长期供给，行业的长期均衡产量和均衡价格是增加的，单个厂商的产量一定会下降吗？$\color{#EC7500}\bigstar$
