--- a/a 知识（伸长版）/14 微观 - 市场理论.md
+++ b/a 知识（伸长版）/14 微观 - 市场理论.md
@@ -11,9 +11,13 @@
 
 ![[1 汇总问题（伸长版）#^0024]]
 
+![[1 汇总问题（伸长版）#^0094]]
+
 ![[1 汇总问题（伸长版）#^0048]]
 
 ![[1 汇总问题（伸长版）#^0002]]
+
+![[1 汇总问题（伸长版）#^0093]]
 
 ### 垄断势力
 
@@ -30,3 +34,7 @@
 ![[1 汇总问题（伸长版）#^0006]]
 
 ![[1 汇总问题（伸长版）#^0068]]
+
+### 价格歧视
+
+![[1 汇总问题（伸长版）#^0090]]
