--- a/1 汇总问题（伸长版）.md
+++ b/1 汇总问题（伸长版）.md
@@ -227,7 +227,7 @@
 > 
 > 对于正常品，$\Delta x_{1}^{m}/\Delta m$ 为正数，收入越多，$x^1_m$ 越大，那么<font color = #003C88>正常品收入效应整体符号为负。</font>相同分析手法，得<font color = #003C88>劣等品收入效应为正。</font>
 > 
-> 可见，<font color = #D7422A>商品的收入效应是正是负与价格变化方向无关，</font>，只有 $\Delta x^n_1$ 的正负才要看价格变化方向。
+> 可见，<font color = #D7422A>商品的收入效应是正是负与价格变化方向无关，</font>只有 $\Delta x^n_1$ 的正负才要看价格变化方向。
 > 
 > **知识分类**：微观 - 消费理论
 > **提问日期**：2024 - 07 - 07
