--- a/0 主页.md
+++ b/0 主页.md
@@ -49,6 +49,8 @@
 > 本网站（已关闭）运维经验源于 <a href="https://publish.obsidian.md/econsun/Welcome+to+My+Webpage">Stu. Paul Sun</a> 网站与 <a href="https://mp.weixin.qq.com/mp/profile_ext?action=home&__biz=MzkxOTY0MzM2MA==#wechat_redirect">Econ Sun</a> 公众号的建设
 > 本网站物料已经开源在 [GitHub 仓库](https://github.com/econsun/FAQ_ECON)，著作与解释权归 极光经济学考研 所有
 
+2024-09-27：<font color = #4A89DC>修改</font> - 问答单元的样式，取消左填充
+2024-09-26：<font color = #E9573F>删除</font> - 存档问题 模块
 2024-08-27：<font color = #E9573F>删除</font> - 答访者问 模块
 2024-07-27：<font color = #E9573F>删除</font> - 汇总问答 中知识分类的链接
 2024-07-27：<font color = #E9573F>删除</font> - 主页 > 说明 中部分内容
