--- a/1 汇总问题（缩短版）.md
+++ b/1 汇总问题（缩短版）.md
@@ -607,6 +607,8 @@
 > 
 > 这个例子说明了汇率下跌后，<font color = #003C88>国内商品价格不变，国外商品会抬高价格，国内价格水平有上升的压力。</font>
 > 
+> 实际上，汇率对价格水平的影响是不容小觑的，外国商品价格实实在在影响到本国的价格水平，尤其是在整体看不出价格水平变化，但到某个具体领域可能受到了巨大冲击。换个方向更好理解，中国是制造业大国，我们有许多商品有着比国外低非常多的价格，同时又是出口大国，国内商品到国外几乎是破坏性打击。话说有点儿夸张了，但是是为了引起这方面的重视，论述题谈到价格变化，就可以想想有没有汇率方面的因素。
+> 
 > **知识分类**：宏观 - 开放经济
 > **提问日期**：2024 - 05 - 16
 > **首次编辑**：2024 - 05 - 27
