--- a/3 操作流水.md
+++ b/3 操作流水.md
@@ -1,6 +1,22 @@
 > 联系方式：<a href="https://qm.qq.com/q/iA1sKuakak">2629223739 (QQ)</a> <a href="mailto:econsunrq@outlook.com">econsunrq@outlook.com (邮箱)</a>
 
-> 同步数据库指的是：问答基本模块在 汇总问答 中，更新首先发生在 汇总问答 数据库。其他如 知识 月度 题库 等数据库需要手动分类和 `Python` 程序复制，更新可能会落后于 汇总问答，故特别增加该操作流水记录。
+> 同步数据库指的是：问答基本模块在 汇总问答 中，更新首先发生在 汇总问答 数据库。其他如 知识 月度 题库 等数据库需要手动分类和 `Python` 程序复制，更新可能会落后于 汇总问答，故特别增加该操作流水记录。详细的文档操作记录可查看 GitHub 仓库
+> https://github.com/econsun/obsidian-econ-faq
+
+2024-09-27：<font color = #967ADC>管理</font> - 提交 GitHub
+2024-09-27：<font color = #967ADC>管理</font> - 同步数据库
+2024-09-26：<font color="#8CC152">添加</font> - [[c 题库（伸长版）/Problem 0104|0104]] - 期望的效用与效用的期望的使用
+2024-09-26：<font color="#8CC152">添加</font> - [[c 题库（伸长版）/Problem 0103|0103]] - $I\left(r\right)$ 与 $CF\left(r\right)$ 中的利率
+2024-09-26：<font color="#8CC152">添加</font> - [[c 题库（伸长版）/Problem 0102|0102]] - 投资可变时的乘数效应
+2024-09-26：<font color="#8CC152">添加</font> - [[c 题库（伸长版）/Problem 0101|0101]] - 谈谈利润最大化的条件
+2024-09-26：<font color="#8CC152">添加</font> - [[c 题库（伸长版）/Problem 0100|0100]] - 为什么货币供给量与价格水平正相关
+2024-09-26：<font color="#8CC152">添加</font> - [[c 题库（伸长版）/Problem 0099|0099]] - 为什么两工厂模型要求规模报酬递减
+2024-09-26：<font color="#8CC152">添加</font> - [[c 题库（伸长版）/Problem 0098|0098]] - 为什么供给冲击会导致 SRAS 曲线移动
+2024-09-26：<font color="#8CC152">添加</font> - [[c 题库（伸长版）/Problem 0097|0097]] - 多重线性函数怎么画无差异曲线草图
+2024-09-26：<font color="#8CC152">添加</font> - [[c 题库（伸长版）/Problem 0096|0096]] - 利润最大化、产量最大化、成本最小化的对偶性
+2024-09-26：<font color = #4A89DC>修改</font> - [[c 题库（伸长版）/Problem 0039|0039]] - 修改表达细节，添加负净出口的含义
+
+---
 
 2024-08-28：<font color = #967ADC>管理</font> - 提交 GitHub
 2024-08-28：<font color = #967ADC>管理</font> - 同步数据库
