--- a/a 知识（伸长版）/12 微观 - 消费理论.md
+++ b/a 知识（伸长版）/12 微观 - 消费理论.md
@@ -23,6 +23,8 @@
 
 ![[1 汇总问题（伸长版）#^0045]]
 
+![[1 汇总问题（伸长版）#^0097]]
+
 ![[1 汇总问题（伸长版）#^0069]]
 
 ![[1 汇总问题（伸长版）#^0029]]
@@ -46,3 +48,5 @@
 ![[1 汇总问题（伸长版）#^0030]]
 
 ![[1 汇总问题（伸长版）#^0088]]
+
+![[1 汇总问题（伸长版）#^0104]]
