--- a/a 知识（缩短版）/24 宏观 - 短期经济.md
+++ b/a 知识（缩短版）/24 宏观 - 短期经济.md
@@ -9,6 +9,8 @@
 
 ![[1 汇总问题（缩短版）#^0016]]
 
+![[1 汇总问题（缩短版）#^0102]]
+
 ![[1 汇总问题（缩短版）#^0033]]
 
 ![[1 汇总问题（缩短版）#^0057]]
@@ -24,5 +26,7 @@
 ![[1 汇总问题（缩短版）#^0043]]
 
 ![[1 汇总问题（缩短版）#^0027]]
+
+![[1 汇总问题（缩短版）#^0098]]
 
 ![[1 汇总问题（缩短版）#^0058]]
