--- a/1 汇总问题（缩短版）.md
+++ b/1 汇总问题（缩短版）.md
@@ -1,12 +1,147 @@
 > 联系方式：<a href="https://qm.qq.com/q/iA1sKuakak">2629223739 (QQ)</a> <a href="mailto:econsunrq@outlook.com">econsunrq@outlook.com (邮箱)</a>
 
+[ [告别信.png]]
+
+### Problem 100 - 110
+
+> [!question]- 0104 | 期望的效用与效用的期望的使用。$\color{#EC7500}\bigstar\bigstar\bigstar$
+> 
+> 题目中的两个名词可能不常见，但我个人认为它们更容易让人理解有什么含义、怎么计算。
+> 
+> 捋一捋思路，学习 “不确定性” 这个部分，第一件大事是判断风险偏好类型。计算每种风险财富的效用，然后取期望得到「效用的期望」，还要计算每种风险财富的期望，然后计算效用得到「期望的效用」，比较二者即得风险偏好类型。（二者的坐标都位于期望财富代表竖直线上，这很重要。）实际上<font color = #D7422A>这一步就是用数学定义判断效用函数的凹凸性，</font>通过对效用函数求二阶导同样可得。
+> 
+> 知道了怎么判断风险类型之后，判断消费者在不确定性下的决策。一般会有 “无风险收入” 和 “有风险收入” 供消费者选择，比如不参与买彩票和参与买彩票两个选择。这种问题中，我们可以去比较 “有风险活动效用的期望” 和 “无风险活动的效用” 来确定消费者的选择。<font color = #D7422A>效用函数的方法适用性最广，因为它利用了很多信息，</font>比如效用函数自带了风险偏好类型（凹凸性），这么做之前我们不必知道消费者的风险偏好类型是哪种，直接按照流程算下来就知道结果了。
+> 
+> 另一种做法是不用效用函数，但是事先知道消费者的风险偏好类型，有的问题也可以解决。当风险厌恶消费者参与有风险活动的期望收入不超过无风险收入的时候，毫无疑问它不会参与有风险活动，不然那还叫厌恶风险吗？只有风险喜好消费者才会彩票期望收益小于彩票价格的时候仍去购买，因为他们相信自己能中特等奖。当有风险收入超过无风险收入了，事情变得有点微妙，必须要用效用函数这种强大的工具才能知道结果。
+> 
+> <font color = #D7422A>答案从来不是书上有什么就只能是什么，书上没写的方法就是错的，</font>一定不要陷入这个误区。
+> 
+> **知识分类**：微观 - 消费理论
+> **提问日期**：2024 - 09 - 25
+> **首次编辑**：2024 - 09 - 26
+^0104
+
+> [!question]- 0103 | $I\left(r\right)$ 与 $CF\left(r\right)$ 中的利率。$\color{#EC7500}\bigstar$
+> 
+> 首先要强调的是，开放经济中有两种利率，一种是国内利率 $r$，一种是世界利率 $r^*$。采用世界利率的 $\mathrm{IS}^*$ 和 $\mathrm{LM}^*$ 曲线会加上星号，与封闭经济的区分。
+> 
+> 任何一本严谨的教材，都会努力避免符号的歧义。既然<font color = #D7422A>一开始定义了</font> $\color{#D7422A}r$ <font color = #D7422A>是国内利率，那任何时候看到</font> $\color{#D7422A}r$ <font color = #D7422A>都是国内利率，不可能是世界利率。</font>这里就已经解答完了 $CF\left(r\right)$ 中的利率是什么利率了，但还有内容值得说。曼昆 第十版 278 页 说到 $r=r^*$ 这个等式代表资本可以完全流通，否则无法成立。换句话说，在资本完全流通的情况下，$CF\left(r\right)$ 和 $CF\left(r^*\right)$ 这两种都是可能出现的，都没问题，这时我们再判断 CF 是什么利率的函数，就要看看自变量是什么了。
+> 
+> $r=r^*$ 只是一种数值上的变量替换，没有根本上改变性质，<font color = #003C88>CF 归根到底是和本国利率有关的，</font>外国根据本国利率来决定要不要向本国进行金融投资，而不是根据世界利率。
+> 
+> 再多说两句，$\color{#003C88}Y$ <font color = #003C88>是总产出、是实际产出，不可能是名义产出，</font>如果 $Y$ 既是实际产出又是名义产出，显然有记号混淆问题。像利率这种名义和实际都很常用的变量，曼昆已经分别设定了 $i$ 和 $r$，不常见的就用除以 $P$ 来表示实际变量，例如 $M/P$、$W/P$（这些变量的名义变量更重要，所以名义变量是大写字母），我们完全不必担心 $Y$ 什么时候突然是名义产出了。
+> 
+> **知识分类**：宏观 - 开放经济
+> **提问日期**：2024 - 09 - 22
+> **首次编辑**：2024 - 09 - 26
+^0103
+
+> [!question]- 0102 | 投资可变时的乘数效应。$\color{#EC7500}\bigstar\bigstar$
+> 
+> 凯恩斯交叉模型假设投资是固定不变的，$I=\bar I$，我们得到了乘数效应的公式；到了 IS - LM 模型中，投资被修改为利率的函数，$I=I\left(r\right)$，之前的乘数效应公式不再有用，这里面是为什么？
+> 
+> 实际上，<font color = #D7422A>这和投资是不是利率的函数没关系</font>（请看第四段）！究其原因，政府支出和利率之间没有影响关系，我们在对 IS 方程求导时，$I\left(r\right)$ 这项和常数没有区别，自然 $\bar I$ 和 $I\left(r\right)$ 是无差异的。真正起作用的，是 IS - LM 在 IS 基础上加入了 LM，多了货币市场均衡的条件。
+> 
+> <font color = #003C88>在没有货币市场均衡条件时，利率只有产品市场均衡一个约束条件，均衡利率可以是任何数值，</font>政府购买变动将会引起 IS 曲线移动 $\Delta G/\left(1-\beta\right)$。<font color = #003C88>有货币市场均衡条件后，利率有两个约束条件，“均衡” 二字多了一层含义，均衡利率被确定到一个确切值，</font>这时 IS 曲线不会根据 $\Delta G/\left(1-\beta\right)$ 来移动，而要考虑进去挤出效应。$\Delta\,G$ 影响了 IS 曲线的位置 --> 均衡利率变动 --> 均衡投资变动 --> 挤出效应发生。现在均衡利率不在可以为任何数值，才会有以上传导链。
+> 
+> 我们还值得讨论下这么一个情况，IS 曲线中还是 $I=\bar I$，那么 IS - LM 模型中只有一个利率的约束条件，其实这样 IS 曲线是垂直于产出坐标轴的，也不会有挤出效应发生。
+> 
+> **知识分类**：宏观 - 短期经济
+> **提问日期**：2024 - 09 - 13
+> **首次编辑**：2024 - 09 - 26
+^0102
+
+> [!question]- 0101 | 谈谈利润最大化的条件。$\color{#EC7500}\bigstar\bigstar$
+> 
+> 本问答作温馨提醒。
+> 
+> 我们都很熟悉 $P=MC$ 这种式子，但同时我们也要记住这些条件是最优化问题 — 利润最大化条件得来的。最优化问题的求解步骤：1. 写出问题是什么；2. 求导得到一阶条件；3. 从一阶条件方程中得到可能的解；4. 用二阶条件验证。经济学里把一阶条件称为均衡条件，所以以上流程我们一点也不陌生。
+> 
+> 最优化问题贯穿西方经济学始终，我们要<font color = #D7422A>从最优化的视角看问题，</font>而不是今天我学了个知识叫 $P=MC$。所以厂商会怎么选择要素？厂商首先要保证利润最大化，然后从利润最大化问题中得到了 $MRP=MFC$，有时候我们不用关心市场结构是什么，这个式子是最一般的、和 $MR=MC$ 一样万金油的工具，任何问题套上准没有错。
+> 
+> 再到第三步求解，如果两工厂模型的均衡条件 $MC_1=MC_2$ 中解出 $q^*$ 了，那厂商还有可能把所有产量压在一个工厂去生产吗？不可能的，因为 $\color{#D7422A}MC_1=MC_2$ <font color = #D7422A>是从利润最大化中求得的，它是铁律，</font>违背了就一定没有利润最大化。所以<font color = #003C88>厂商会不会只让一个工厂生产，就是看</font> $\color{#003C88}MC_1=MC_2$ <font color = #003C88>有没有解，有就肯定会两个工厂都生产；</font>如果没有，我们再结合问题分析。这么一看问题就简单多了。
+> 
+> **知识分类**：微观 - 生产理论
+> **提问日期**：2024 - 09 - 11
+> **首次编辑**：2024 - 09 - 26
+^0101
+
 ### Problem 91 - 100
+
+> [!question]- 0100 | 为什么货币供给量与价格水平正相关？$\color{#EC7500}\bigstar\bigstar$
+> 
+> <font color = #D7422A>既然要研究价格水平变动，那肯定不能用价格水平固定的模型，</font>例如 LM 中假设价格水平不变。分析这个问题，可以流动性偏好入手，然后到 AD 曲线上，最后得到结论。
+> 
+> 货币供给增加后，相对来说货币需求减少，从流动性偏好模型推导出的 LM 曲线相对于之前来说右移，从而 AD 曲线右移，在 AS 曲线位置不变情况下，价格水平上升。（<font color = #D7422A>不能假设总供给曲线是水平的，</font>需要是向右上方倾斜的 AS 曲线。）货币供给量增加是扩张性货币政策，刺激总需求，直接就能知道 AD 会右移动。<font color = #003C88>正是因为货币供给量与价格水平的关系，稳定物价是各国央行的首要任务之一。</font>
+> 
+> 从数量方程推导更加容易，$\%\Delta\,M + \%\Delta\,V = \%\Delta\,P + \%\Delta\,T$，其他变量不变的情况下，货币供给和价格水平同向变动。
+> 
+> 其实这个问题联系生活想一想很好理解，货币供给量多了，人们手上的钱就多了，大家 “富有” 了，厂商当然会抬高价格。
+> 
+> **知识分类**：宏观 - 长期经济
+> **提问日期**：2024 - 09 - 06
+> **首次编辑**：2024 - 09 - 26
+^0100
+
+> [!question]- 0099 | 为什么两工厂模型要求规模报酬递减？$\color{#EC7500}\bigstar\bigstar$
+> 
+> 首先我们来回顾下「自然垄断」。自然垄断行业的重要特征是极大的规模经济效应，AC 曲线递减（AC 递减一定有 MC 递减），产量越多越好，所以许多自然垄断行业被收为国有，避免每家生产一点，而是一家生产所有。
+> 
+> 回到两工厂模型，如果两个厂商也是 AC 曲线递减，那么只用一家生产是比较好的选择。两工厂模型的问题中有一句 “规模报酬递减”，个人认为就是不想讨论 AC 曲线递减的情况，而实际上题目也会给生产函数，AC 曲线是不是递增的一目了然。
+> 
+> 来想另一个问题，假设 AC 曲线就是向右上方倾斜的，怎么生产比较好？暂时放下固定成本的影响，等边际成本法则仍然要成立，但现在工厂越多越好，让每个工厂都处于较低的产出水平，充分利用 AC 还没升太高的规模所带来的优势。（这么做确实是有点荒谬、不切实际）
+> 
+> 以上描述用到了 [[c 题库（缩短版）/Problem 0010|0010]] 的结论 — 规模报酬递减一定有规模不经济，和 [[c 题库（缩短版）/Problem 0080|0080]] 证明规模不经济一定有 AC 曲线上升。
+> 
+> **知识分类**：微观 - 生产理论
+> **提问日期**：2024 - 09 - 03
+> **首次编辑**：2024 - 09 - 26
+^0099
+
+> [!question]- 0098 | 为什么供给冲击会导致 SRAS 曲线移动？$\color{#EC7500}\bigstar\bigstar$
+> 
+> 在 曼昆 第十版 313 页 中，从总供给曲线推导菲利普斯曲线，有明确地<font color = #D7422A>为方程加上供给冲击</font>的步骤，我们可以认为供给冲击本就应该在总供给的表达式中
+> $$P=EP+\dfrac1\alpha\,(Y-\bar Y)\color{#D7422A}+v$$
+> 总供给曲线所在的坐标系，价格为纵轴产出为横轴，$\color{#D7422A}v$ <font color = #D7422A>的变动会引起总供给曲线的上下移动</font>，这从数学视角解释了为什么不利的供给冲击会使水平的 SRAS 曲线向上移动，即使 SRAS 曲线不水平，不利的供给冲击也不是让它向左移动（图像上向左和向上移动是看不出的，水平曲线只有向上移动没有向左移动）。这件事还有非常好的经济学解释，<font color = #003C88>供给冲击会最先影响到价格，</font>比如生产成本上升，然后才会传导到总产出变化。
+> 
+> **知识分类**：宏观 - 短期经济
+> **提问日期**：2024 - 09 - 05
+> **首次编辑**：2024 - 09 - 26
+^0098
+
+> [!question]- 0097 | 多重线性函数怎么画无差异曲线草图？$\color{#EC7500}\bigstar\bigstar$
+> 
+> 假装我们不知道 $\min\left\{a\,X,\,b\,Y\right\}$ 是怎么画的，现在来考虑这个问题。首先我们知道是两条直线相交，再加上我们学的偏好都是良性偏好，无差异曲线都凸向原点，那么不难画出一个形如坐标线第一象限的两条射线，它们之间的角度是直角。
+> 
+> 接着考虑 $\min\left\{a\,X+c\,Y,\,b\,X+d\,Y\right\}$ 的图像，许多人会画成图中虚线构成的组合，因为虚线在实线的下方，体现了 $\min$。可惜这是错误的，<font color = #D7422A>它体现的是 “商品数量” 更</font> $\color{#D7422A}\min$ <font color = #D7422A>的商品组合，但不是效用函数中代表更</font> $\color{#D7422A}\min$ <font color = #D7422A>“效用” 的商品组合。</font>
+> 
+> 怎么理解这件事呢？假设 A 在 $U_1=a\,X+c\,Y$ 的无差异曲线上，B 在 $U_2=b\,X+d\,Y$ 的无差异曲线上。我们观察到<font color = #D7422A>图中红蓝色无差异曲线虽然交叉，但它们代表相同的效用水平，也就是说 A 和 B 两点有相同效用值，</font>$U_1\left(A\right)=U_2\left(B\right)$。根据越多越好原则，对于 $U_1$ 这个效用函数
+> $$U_1\left(B\right)>U_1\left(A\right)=U_2\left(B\right)$$
+> 这就得到了为什么实线相较于虚线在更外面的位置却是更小的效用。
+> 
+> ![[0097.png|200]]
+> 
+> **知识分类**：微观 - 消费理论
+> **提问日期**：2024 - 04 - 18
+> **首次编辑**：2024 - 09 - 26
+^0097
+
+> [!question]- 0096 | 利润最大化、产量最大化、成本最小化的对偶性。$\color{#EC7500}\bigstar\bigstar$
+> 
+> 想象一下厂商的实际决策，利润最大化是通过调整产量实现的，所以在决策时厂商会先知道要生产多少，在这个既定目标下，厂商再去考虑怎么成本最小化。可见<font color = #003C88>成本最小化问题是利润最大化问题的一部分，</font>之间不具有对偶关系。我们学过「要素需求函数」与「条件要素需求函数」，它们分别由利润最大化和成本最小化求得，名字中“条件”一定程度上反映了“有条件”是“无条件”的一部分。
+> 
+> <font color = #003C88>产量最大化和成本最小化是对偶问题，</font>它们有相同的决策变量 $L$ 和 $K$，前者以 $Q$ 为目标函数、$C$ 为约束条件，后者以 $C$ 为目标函数、$Q$ 为约束条件。即使短期中 $K$ 固定，也不破坏对偶关系。
+> 
+> **知识分类**：微观 - 生产理论
+> **提问日期**：2024 - 07 - 19
+> **首次编辑**：2024 - 09 - 26
+^0096
 
 > [!question]- 0095 | 宏观经济学中字母 $M$ 是代表什么变量？$\color{#EC7500}\bigstar\bigstar$
 > 
 > 曼昆 第十版 第 82 页讲到了数量方程，只说 $M$ 是货币量，此外既没说是需求也没说是供给。在货币的符号方面，一般没有上角标的 $M$ 是货币供给，有上角标的 $M^d$ 是货币需求。当我们把二者混为一谈的时候，隐晦地使用了 $M=M^d$ 这一均衡条件。
 > 
-> 紧接着 <font color = #D7422A>83 页就讲到了货币需求函数，这是本书中第一次出现货币需求函数。</font>这个货币需求函数可以认为是长期中的，我这么判断是因为我们还没进入短期理论。书中第二次谈到货币需求函数就要到流动性偏好理论了，那是短期的货币需求函数。所以在书中，我们学习了两个货币需求的理论，一个是新古典的，一个是凯恩斯的，这些等价名称都要记住，避免看到了辨认不出。
+> 紧接着 <font color = #D7422A>83 页就讲到了货币需求函数，这是本书中首次出现货币需求函数。</font>这个货币需求函数可以认为是长期中的，我这么判断是因为我们还没进入短期理论。书中第二次谈到货币需求函数就要到流动性偏好理论了，那是短期的货币需求函数。所以在书中，我们学习了两个货币需求的理论，一个是新古典的，一个是凯恩斯的，这些等价名称都要记住，避免看到却认不出。
 > 
 > **知识分类**：宏观 - 长期经济
 > **提问日期**：2024 - 08 - 19
@@ -225,7 +360,7 @@
 > 
 > 对于正常品，$\Delta x_{1}^{m}/\Delta m$ 为正数，收入越多，$x^1_m$ 越大，那么<font color = #003C88>正常品收入效应整体符号为负。</font>相同分析手法，得<font color = #003C88>劣等品收入效应为正。</font>
 > 
-> 可见，<font color = #D7422A>商品的收入效应是正是负与价格变化方向无关，</font>，只有 $\Delta x^n_1$ 的正负才要看价格变化方向。
+> 可见，<font color = #D7422A>商品的收入效应是正是负与价格变化方向无关，</font>只有 $\Delta x^n_1$ 的正负才要看价格变化方向。
 > 
 > **知识分类**：微观 - 消费理论
 > **提问日期**：2024 - 07 - 07
@@ -607,8 +742,6 @@
 > 
 > 这个例子说明了汇率下跌后，<font color = #003C88>国内商品价格不变，国外商品会抬高价格，国内价格水平有上升的压力。</font>
 > 
-> 实际上，汇率对价格水平的影响是不容小觑的，外国商品价格实实在在影响到本国的价格水平，尤其是在整体看不出价格水平变化，但到某个具体领域可能受到了巨大冲击。换个方向更好理解，中国是制造业大国，我们有许多商品有着比国外低非常多的价格，同时又是出口大国，国内商品到国外几乎是破坏性打击。话说有点儿夸张了，但是是为了引起这方面的重视，论述题谈到价格变化，就可以想想有没有汇率方面的因素。
-> 
 > **知识分类**：宏观 - 开放经济
 > **提问日期**：2024 - 05 - 16
 > **首次编辑**：2024 - 05 - 27
@@ -851,11 +984,16 @@
 
 > [!question]- 0039 | 怎么理解贸易余额是外汇市场上的本币需求？$\color{#EC7500}\bigstar$ 
 > 
-> 回答这个问题我们要关注贸易是如何进行的。我们作为中国本土企业，在美国进行销售，美国人用美元支付，那么我们挣得的是美元。<font color = #D7422A>美元是无法在中国流通的，我们要换成人民币。这个兑换就产生了对人民币的需求。</font>所以贸易余额越大，或者说净出口越大，说明对本币的净需求越大，越需要本币来进行贸易挣得外币的兑换。
+> 回答这个问题我们要关注贸易是如何进行的。我们作为中国企业，在美国境内进行销售商品，美国人用美元支付，那么我们挣得的是美元。<font color = #D7422A>美元是无法在中国流通的，我们要换成人民币。这个兑换就产生了对人民币的需求。</font><font color = #003C88>所以贸易余额越大，或者说净出口越大，表明对本币的净需求越大，越需要大量本币来进行贸易挣得外币的兑换。</font>
+> 
+> 反过来看，进口是外国人赚得人民币，然后兑换成自己的货币，“退还” 人民币，他们对人民币可以说是毫无需求，根本不需要人民币（也就是我们的本币）供给。所以<font color = #003C88>净出口为负数的时候，相比于外币兑换成人民币，有更多的人民币需要兑换成外币。</font>净出口 = 出口 - 进口，这个减法代表两种力量的拉扯。
+> 
+> 翻开<font color = #003C88>我国的《国际收支平衡表》会发现，两大主要的会计科目是 “经常账户” 和 “资本和金融账户”（还有一个重要科目是两大账户的差额，用于最后配平），基本对应了我们在宏观中学的唯二两个开放经济下的变量 — 净出口和资本净流出。</font>虽然开放经济有 “开放二字”，但净出口和资本净流出就是左手倒右手，有一种 “封闭” 的感觉。正净出口赚来的前会变成资本净流出去（金融）投资，负净出口缺的钱用资本净流出来填补。它们像是会计中的复式记账法，一方是借，一方是贷，总能平衡，不需要用国内的钱去填补。当然这一切都以贸易平衡为前提，但也很好理解出现贸易赤字和贸易盈余的情况。
 > 
 > **知识分类**：宏观 - 开放经济
 > **提问日期**：2024 - 04 - 30
 > **首次编辑**：2024 - 05 - 10
+> **二次编辑**：2024 - 09 - 26，修改表达细节；增加负净出口的含义；增加 “净出口和资本净流出是硬币正反两面的解释”
 ^0039
 
 > [!question]- 0038 | 关于曼昆第六章问题与应用第 1 题 d 问的勘误。$\color{#EC7500}\bigstar\bigstar\bigstar$
@@ -977,24 +1115,25 @@
 > [!question]- 0029 | 消费者均衡问题构造拉格朗日函数，$\lambda$ 要怎么设置？$\color{#EC7500}\bigstar\bigstar\bigstar$
 > 
 > <font color = #D7422A>只有以下两种设置是正确的</font>
-> $$\begin{aligned}&\mathscr L\left(X,Y,\lambda\right)=U\left(X,Y\right)-\lambda\left(P_XX+P_YY-I\right)\\\\&\mathscr L\left(X,Y,\lambda\right)=U\left(X,Y\right)+\lambda\left(I-P_XX-P_YY\right)\end{aligned}$$
+> $$\begin{aligned}&\mathcal L\left(X,Y,\lambda\right)=U\left(X,Y\right)-\lambda\left(P_XX+P_YY-I\right)\\\\&\mathcal L\left(X,Y,\lambda\right)=U\left(X,Y\right)+\lambda\left(I-P_XX-P_YY\right)\end{aligned}$$
 > 如第二种，消费者只有 $I$ 的收入，不可能消费支出大于 $I$，所以 $I-P_XX-P_YY\ge0$，要想 $+\lambda\left(I-P_XX-P_YY\right)$ 整体为非负数，就要求 $\lambda$ 为非负数。同理，要想 $-\lambda\left(P_XX+P_YY-I\right)$ 整体为非负数，就要求 $\lambda$ 为非负数。简言之，一定要让 $\lambda$ 为非负数，这是因为经济学中，$\color{#003C88}\lambda$ <font color = #003C88>有影子价格的含义，既然是价格，就不可能是负数。</font>（后文有对影子价格的解释）
 > 
 > 因为预算约束的存在，我们可以得到下式
-> $$U\left(X,Y\right)=U\left(X,Y\right)-\underset{ =\,0 }{\underbrace{ \lambda\left(P_XX-P_YY-I\right) }}$$
-> 把等式右侧设为拉格朗日函数 $\mathscr L$，对拉格朗日函数求无条件极值
-> $$\begin{cases}\dfrac{\partial\mathscr L}{\partial X}=0\,, \ \ \ \ \dfrac{\partial\mathscr L}{\partial Y}=0\\\\\dfrac{\partial\mathscr L}{\partial\lambda}=I-P_XX-P_YY=0\end{cases}$$
-> 不难看出<font color = #D7422A>第一行是效用函数的无条件极值，第二行是预算约束，如果这个方程组有解，那么解是能满足以上三个式子的。</font>这样我们就在约束条件上找到了极值，解释了拉格朗日乘数法为什么能求条件极值。
+> $$U\left(X,Y\right)=U\left(X,Y\right)-\underset{ =\,0 }{\underbrace{ \lambda\left(P_XX-P_YY-I\right)}}$$
+> 把等式右侧设为拉格朗日函数 $\mathcal L\left(X,Y,\lambda\right)$，对拉格朗日函数求无条件极值
+> $$\begin{cases}\dfrac{\partial\mathcal L}{\partial X}=0\,, \ \ \ \ \dfrac{\partial\mathcal L}{\partial Y}=0\\\\\dfrac{\partial\mathcal L}{\partial\lambda}=I-P_XX-P_YY=0\end{cases}$$
+> 不难看出<font color = #D7422A>第一行是效用函数的无条件极值，第二行是预算约束。如果这个方程组有解，那么解是能满足以上三个式子的。</font>这样我们就在约束条件上找到了极值，解释了拉格朗日乘数法为什么能求条件极值。
 > 
-> $\color{#003C88}\lambda$ <font color = #003C88>的数学意义是放松（或收紧）约束条件会对极值产生什么影响，经济学里也是这样的。</font>通过一个例子理解影子价格这个名字的由来。工人每天只工作八小时，而厂商最近为了增加利润，要求他们工作九小时，约束条件就从八小时放松为了九小时。原先企业利润为 100 万，现在利润为 110 万，这多出来的 10 万是工人努力工作得来的，理应全部分配给工人，这十万就是工人的影子工资，此时 $\lambda$ 的值。之所以称为 “影子” 是因为这是理论上的，厂商最后真正向工人在八小时工资基础上额外支付多少是另一回事。
+> $\color{#003C88}\lambda$ <font color = #003C88>的数学意义是放松（或收紧）约束条件会对最优值产生什么影响，经济学里也是这样的。</font>通过一个例子理解影子价格这个名字的由来。工人每天只工作八小时，而厂商最近为了增加利润，要求他们工作九小时，工作时间约束条件就从 ${T}\le8$ 放松为了 ${T}\le9$（范围变大了）。原先企业利润为 100 万，现在利润为 110 万，这多出来的 10 万是工人努力工作得来的，理应全部分配给工人，我们称这 10 万就是工人的影子工资，也是此时 $\lambda$ 的值。之所以称为 “影子” 是因为这是理论上的，厂商最后真正向工人在八小时工资基础上额外支付多少是另一回事。
 > 
-> 前文中提到，我们一定要让 $+\lambda\left(I-P_XX-P_YY\right)$ 或 $-\lambda\left(P_XX+P_YY-I\right)$ 整体为非负数，如果不这么做，可能会出现放松约束条件后，新最优化问题的极值反而比之前小。比如收入增加了，最大效用不如增加前；工人多工作了，厂商最大利润会下降。显然，放松条件获得更大的极值才是符合经济学中大多数情况的。
+> 从最优化理论来说，消费者选择问题本是带有 $P_XX+P_YY\le I$ 不等式约束的最优化问题。最优化问题是求最大化还是最小化、约束条件是大于还是小于，这些都会对 $\lambda$ 的正负性产生影响。正是因为经济学中的最优化问题都是相似的，满足特定形式，$\lambda$ 才非负且有影子价格这么好的含义。
 > 
 > **知识分类**：微观 - 消费理论
 > **提问日期**：2024 - 04 - 13
 > **首次编辑**：2024 - 04 - 27
 > **二次编辑**：2024 - 05 - 31，<font color = #4A89DC>修改</font>，表达细节，增加颜色着重
 > **三次编辑**：2024 - 06 - 08，<font color = #4A89DC>修改</font>，表达细节，增加一些解释
+> **四次编辑**：2024 - 08 - 29，<font color = #4A89DC>修改</font>，表达细节，增加一些解释
 ^0029
 
 > [!question]- 0028 | 第六章 开放经济 和第十三章 重访开放经济 的附录有什么区别？模型该如何选择？$\color{#EC7500}\bigstar\bigstar$
